--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.7.1",
-    "esbuild": "0.18.11"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.7.4",
+    "esbuild": "0.18.11",
+    "tailwindcss": "^3.3.2"
   }
 }
