--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0"
   }
 }
